--- a/index.html
+++ b/index.html
@@ -13,121 +13,135 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html" class="logotype">
-                Web<span class="logospan">Studio</span>
-            </a>
-            <ul>
-                <li><a href="./index.html" class="nav-li">Studio</a></li>
-                <li><a href="" class="nav-li">Portfolio</a></li>
-                <li><a href="" class="nav-li">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="address">
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+    <div class="maincontainer">
+    <header class="page-header">
+        <div class="container">
+            <nav class="navbar">
+                <a href="./index.html" class="logotype">
+                    Web<span class="logospan">Studio</span>
+                </a>
+                <ul class="nav-menu">
+                    <li><a href="./index.html" class="nav-li">Studio</a></li>
+                    <li><a href="" class="nav-li">Portfolio</a></li>
+                    <li><a href="" class="nav-li">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul>
+                    <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
-        <section class="section-title">
-            <h1 class="title">Effective Solutions for Your Business</h1>
-            <button type="button" class="btn">Order Service</button>
+        <section class="section section-title">
+            <div class="container">
+                <h1 class="title">Effective Solutions <br> for Your Business</h1>
+                <button type="button" class="btn">Order Service</button>
+            </div>
         </section>
-        <section>
-            <h2>Features</h2>
-            <ul>
-                <li>
-                    <h3 class="third-h">Strategy</h3>
-                    <p class="paragraph">Our goal is to identify the business problem to walk away with the perfect and creative solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="third-h">Punctuality</h3>
-                    <p class="paragraph">Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.</p>
-                </li>
-                <li>
-                    <h3 class="third-h">Diligence</h3>
-                    <p class="paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.</p>
-                </li>
-                <li>
-                    <h3 class="third-h">Technologies</h3>
-                    <p class="paragraph">Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.</p>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="container">
+                <h2 class="visually-hidden">Features</h2>
+                <ul>
+                    <li>
+                        <h3 class="third-h">Strategy</h3>
+                        <p class="paragraph">Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="third-h">Punctuality</h3>
+                        <p class="paragraph">Bring the key message to the brand's audience for the best price within the shortest possible
+                            time.</p>
+                    </li>
+                    <li>
+                        <h3 class="third-h">Diligence</h3>
+                        <p class="paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize
+                            risk.</p>
+                    </li>
+                    <li>
+                        <h3 class="third-h">Technologies</h3>
+                        <p class="paragraph">Design practice focused on digital experiences. We bring forth a deep passion for
+                            problem-solving.</p>
+                 </li>
+                </ul>
+            </div>
         </section>
-        <section class="team">
-            <h2 class="second-h">Our Team</h2>
-            <ul>
-                <li class="teamlist">
-                    <img src="./images/one.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h3 class="third-h">Mark Guerrero</h3>
-                    <p class="paragraph">Product Designer</p>
-                </li>
-                <li class="teamlist">
-                    <img src="./images/two.jpg" alt="Tom Ford" width="264" height="260">
-                    <h3 class="third-h">Tom Ford</h3>
-                    <p class="paragraph">Frontend Developer</p>
-                </li>
-                <li class="teamlist">
-                    <img src="./images/three.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h3 class="third-h">Camila Garcia</h3>
-                    <p class="paragraph">Marketing</p>
-                </li>
-                <li class="teamlist">
-                    <img src="./images/four.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h3 class="third-h">Daniel Wilson</h3>
-                    <p class="paragraph">UI Designer</p>
-                </li>
-            </ul>
+        <section class="section team">
+            <div class="container">
+                <h2 class="second-h">Our Team</h2>
+                <ul>
+                    <li class="teamlist">
+                        <img src="./images/one.jpg" alt="Mark Guerrero" width="264" height="260">
+                        <h3 class="third-h">Mark Guerrero</h3>
+                        <p class="paragraph">Product Designer</p>
+                    </li>
+                    <li class="teamlist">
+                        <img src="./images/two.jpg" alt="Tom Ford" width="264" height="260">
+                        <h3 class="third-h">Tom Ford</h3>
+                        <p class="paragraph">Frontend Developer</p>
+                    </li>
+                    <li class="teamlist">
+                        <img src="./images/three.jpg" alt="Camila Garcia" width="264" height="260">
+                        <h3 class="third-h">Camila Garcia</h3>
+                        <p class="paragraph">Marketing</p>
+                    </li>
+                    <li class="teamlist">
+                        <img src="./images/four.jpg" alt="Daniel Wilson" width="264" height="260">
+                        <h3 class="third-h">Daniel Wilson</h3>
+                        <p class="paragraph">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section>
-            <h2 class="second-h">Our Portfolio</h2>
-            <ul>
-                <li class="portfolio">
-                    <img src="./images/banking.jpg" alt="Banking App" width="360" height="300">
-                    <h3 class="third-h">Banking App</h3>
-                    <p class="paragraph">App</p>
-                </li>
-                <li class="portfolio">
-                    <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300">
-                    <h3 class="third-h">Cashless Payment</h3>
-                    <p class="paragraph">Marketing</p>
-                </li>
-                <li class="portfolio">
-                    <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300">
-                    <h3 class="third-h">Meditation App</h3>
-                    <p class="paragraph">App</p>
-                </li>
-                <li class="portfolio">
-                    <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
-                    <h3 class="third-h">Taxi Service</h3>
-                    <p class="paragraph">Marketing</p>
-                </li>
-                <li class="portfolio">
-                    <img src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
-                    <h3 class="third-h">Screen Illustrations</h3>
-                    <p class="paragraph">Design</p>
-                </li>
-                <li class="portfolio">
-                    <img src="./images/online.jpg" alt="Online Courses" width="360" height="300">
-                    <h3 class="third-h">Online Courses</h3>
-                    <p class="paragraph">Marketing</p>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="container">
+                <h2 class="second-h">Our Portfolio</h2>
+                <ul>
+                    <li class="portfolio">
+                        <img src="./images/banking.jpg" alt="Banking App" width="360" height="300">
+                        <h3 class="third-h">Banking App</h3>
+                        <p class="paragraph">App</p>
+                    </li>
+                    <li class="portfolio">
+                        <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300">
+                        <h3 class="third-h">Cashless Payment</h3>
+                        <p class="paragraph">Marketing</p>
+                    </li>
+                    <li class="portfolio">
+                        <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300">
+                        <h3 class="third-h">Meditation App</h3>
+                        <p class="paragraph">App</p>
+                    </li>
+                    <li class="portfolio">
+                        <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
+                        <h3 class="third-h">Taxi Service</h3>
+                        <p class="paragraph">Marketing</p>
+                    </li>
+                    <li class="portfolio">
+                        <img src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
+                        <h3 class="third-h">Screen Illustrations</h3>
+                        <p class="paragraph">Design</p>
+                    </li>
+                    <li class="portfolio">
+                        <img src="./images/online.jpg" alt="Online Courses" width="360" height="300">
+                        <h3 class="third-h">Online Courses</h3>
+                        <p class="paragraph">Marketing</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="logotype">
-            Web<span class="logospan-footer">Studio</span>
-        </a>
-        <p class="paragraph-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="container">
+            <a href="./index.html" class="logotype">
+                Web<span class="logospan-footer">Studio</span>
+            </a>
+            <p class="paragraph-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
+    </div>
 </body>
 
 </html>
