add containers, edit flex elements

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-
 <body>
     <div class="maincontainer">
     <header class="page-header">
@@ -41,7 +39,7 @@
                 <button type="button" class="btn">Order Service</button>
             </div>
         </section>
-        <section class="section">
+        <section class="section features-section">
             <div class="container">
                 <h2 class="visually-hidden">Features</h2>
                 <ul>
@@ -74,60 +72,60 @@
                 <ul>
                     <li class="teamlist">
                         <img src="./images/one.jpg" alt="Mark Guerrero" width="264" height="260">
-                        <h3 class="third-h">Mark Guerrero</h3>
-                        <p class="paragraph">Product Designer</p>
+                        <h3 class="third-h-team">Mark Guerrero</h3>
+                        <p class="paragraph-team">Product Designer</p>
                     </li>
                     <li class="teamlist">
                         <img src="./images/two.jpg" alt="Tom Ford" width="264" height="260">
-                        <h3 class="third-h">Tom Ford</h3>
-                        <p class="paragraph">Frontend Developer</p>
+                        <h3 class="third-h-team">Tom Ford</h3>
+                        <p class="paragraph-team">Frontend Developer</p>
                     </li>
                     <li class="teamlist">
                         <img src="./images/three.jpg" alt="Camila Garcia" width="264" height="260">
-                        <h3 class="third-h">Camila Garcia</h3>
-                        <p class="paragraph">Marketing</p>
+                        <h3 class="third-h-team">Camila Garcia</h3>
+                        <p class="paragraph-team">Marketing</p>
                     </li>
                     <li class="teamlist">
                         <img src="./images/four.jpg" alt="Daniel Wilson" width="264" height="260">
-                        <h3 class="third-h">Daniel Wilson</h3>
-                        <p class="paragraph">UI Designer</p>
+                        <h3 class="third-h-team">Daniel Wilson</h3>
+                        <p class="paragraph-team">UI Designer</p>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <section class="section section-portfolio">
             <div class="container">
                 <h2 class="second-h">Our Portfolio</h2>
                 <ul>
                     <li class="portfolio">
                         <img src="./images/banking.jpg" alt="Banking App" width="360" height="300">
-                        <h3 class="third-h">Banking App</h3>
-                        <p class="paragraph">App</p>
+                        <h3 class="third-h-portfolio">Banking App</h3>
+                        <p class="paragraph-portfolio">App</p>
                     </li>
                     <li class="portfolio">
                         <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300">
-                        <h3 class="third-h">Cashless Payment</h3>
-                        <p class="paragraph">Marketing</p>
+                        <h3 class="third-h-portfolio">Cashless Payment</h3>
+                        <p class="paragraph-portfolio">Marketing</p>
                     </li>
                     <li class="portfolio">
                         <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300">
-                        <h3 class="third-h">Meditation App</h3>
-                        <p class="paragraph">App</p>
+                        <h3 class="third-h-portfolio">Meditation App</h3>
+                        <p class="paragraph-portfolio">App</p>
                     </li>
                     <li class="portfolio">
                         <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
-                        <h3 class="third-h">Taxi Service</h3>
-                        <p class="paragraph">Marketing</p>
+                        <h3 class="third-h-portfolio">Taxi Service</h3>
+                        <p class="paragraph-portfolio">Marketing</p>
                     </li>
                     <li class="portfolio">
                         <img src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
-                        <h3 class="third-h">Screen Illustrations</h3>
-                        <p class="paragraph">Design</p>
+                        <h3 class="third-h-portfolio">Screen Illustrations</h3>
+                        <p class="paragraph-portfolio">Design</p>
                     </li>
                     <li class="portfolio">
                         <img src="./images/online.jpg" alt="Online Courses" width="360" height="300">
-                        <h3 class="third-h">Online Courses</h3>
-                        <p class="paragraph">Marketing</p>
+                        <h3 class="third-h-portfolio">Online Courses</h3>
+                        <p class="paragraph-portfolio">Marketing</p>
                     </li>
                 </ul>
             </div>
