--- a/index.html
+++ b/index.html
@@ -133,10 +133,12 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="logotype">
-                Web<span class="logospan-footer">Studio</span>
-            </a>
-            <p class="paragraph-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <div class="footer-container">
+                <a href="./index.html" class="logotype">
+                    Web<span class="logospan-footer">Studio</span>
+                </a>
+                <p class="paragraph-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
         </div>
     </footer>
     </div>
