--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
             <address class="address">
-                <ul>
+                <ul class="ul-adress">
                     <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
                     <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
                 </ul>
@@ -35,30 +35,30 @@
     <main>
         <section class="section section-title">
             <div class="container">
-                <h1 class="title">Effective Solutions <br> for Your Business</h1>
+                <h1 class="title">Effective Solutions for Your Business</h1>
                 <button type="button" class="btn">Order Service</button>
             </div>
         </section>
         <section class="section features-section">
             <div class="container">
                 <h2 class="visually-hidden">Features</h2>
-                <ul>
-                    <li>
+                <ul class="ul-features">
+                    <li class="features-li">
                         <h3 class="third-h">Strategy</h3>
                         <p class="paragraph">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                         </p>
                     </li>
-                    <li>
+                    <li class="features-li">
                         <h3 class="third-h">Punctuality</h3>
                         <p class="paragraph">Bring the key message to the brand's audience for the best price within the shortest possible
                             time.</p>
                     </li>
-                    <li>
+                    <li class="features-li">
                         <h3 class="third-h">Diligence</h3>
                         <p class="paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize
                             risk.</p>
                     </li>
-                    <li>
+                    <li class="features-li">
                         <h3 class="third-h">Technologies</h3>
                         <p class="paragraph">Design practice focused on digital experiences. We bring forth a deep passion for
                             problem-solving.</p>
@@ -69,26 +69,34 @@
         <section class="section team">
             <div class="container">
                 <h2 class="second-h">Our Team</h2>
-                <ul>
+                <ul class="ul-team">
                     <li class="teamlist">
                         <img src="./images/one.jpg" alt="Mark Guerrero" width="264" height="260">
-                        <h3 class="third-h-team">Mark Guerrero</h3>
-                        <p class="paragraph-team">Product Designer</p>
+                        <div class="card-container">
+                            <h3 class="third-h-team">Mark Guerrero</h3>
+                            <p class="paragraph-team">Product Designer</p>
+                        </div>
                     </li>
                     <li class="teamlist">
                         <img src="./images/two.jpg" alt="Tom Ford" width="264" height="260">
-                        <h3 class="third-h-team">Tom Ford</h3>
-                        <p class="paragraph-team">Frontend Developer</p>
+                        <div class="card-container">
+                            <h3 class="third-h-team">Tom Ford</h3>
+                            <p class="paragraph-team">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="teamlist">
                         <img src="./images/three.jpg" alt="Camila Garcia" width="264" height="260">
-                        <h3 class="third-h-team">Camila Garcia</h3>
-                        <p class="paragraph-team">Marketing</p>
+                        <div class="card-container">
+                            <h3 class="third-h-team">Camila Garcia</h3>
+                            <p class="paragraph-team">Marketing</p>
+                        </div>
                     </li>
                     <li class="teamlist">
                         <img src="./images/four.jpg" alt="Daniel Wilson" width="264" height="260">
-                        <h3 class="third-h-team">Daniel Wilson</h3>
-                        <p class="paragraph-team">UI Designer</p>
+                        <div class="card-container">
+                            <h3 class="third-h-team">Daniel Wilson</h3>
+                            <p class="paragraph-team">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -96,36 +104,48 @@
         <section class="section section-portfolio">
             <div class="container">
                 <h2 class="second-h">Our Portfolio</h2>
-                <ul>
+                <ul class="ul-portfolio">
                     <li class="portfolio">
                         <img src="./images/banking.jpg" alt="Banking App" width="360" height="300">
-                        <h3 class="third-h-portfolio">Banking App</h3>
-                        <p class="paragraph-portfolio">App</p>
+                        <div class="card-container-p">
+                            <h3 class="third-h-portfolio">Banking App</h3>
+                            <p class="paragraph-portfolio">App</p>
+                        </div>
                     </li>
                     <li class="portfolio">
                         <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300">
-                        <h3 class="third-h-portfolio">Cashless Payment</h3>
-                        <p class="paragraph-portfolio">Marketing</p>
+                        <div class="card-container-p">
+                            <h3 class="third-h-portfolio">Cashless Payment</h3>
+                            <p class="paragraph-portfolio">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio">
                         <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300">
-                        <h3 class="third-h-portfolio">Meditation App</h3>
-                        <p class="paragraph-portfolio">App</p>
+                        <div class="card-container-p">
+                            <h3 class="third-h-portfolio">Meditation App</h3>
+                            <p class="paragraph-portfolio">App</p>
+                        </div>
                     </li>
                     <li class="portfolio">
                         <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
-                        <h3 class="third-h-portfolio">Taxi Service</h3>
-                        <p class="paragraph-portfolio">Marketing</p>
+                        <div class="card-container-p">
+                            <h3 class="third-h-portfolio">Taxi Service</h3>
+                            <p class="paragraph-portfolio">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio">
                         <img src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
-                        <h3 class="third-h-portfolio">Screen Illustrations</h3>
-                        <p class="paragraph-portfolio">Design</p>
+                        <div class="card-container-p">
+                            <h3 class="third-h-portfolio">Screen Illustrations</h3>
+                            <p class="paragraph-portfolio">Design</p>
+                        </div>
                     </li>
                     <li class="portfolio">
                         <img src="./images/online.jpg" alt="Online Courses" width="360" height="300">
-                        <h3 class="third-h-portfolio">Online Courses</h3>
-                        <p class="paragraph-portfolio">Marketing</p>
+                        <div class="card-container-p">
+                            <h3 class="third-h-portfolio">Online Courses</h3>
+                            <p class="paragraph-portfolio">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -133,12 +153,10 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="footer-container">
                 <a href="./index.html" class="logotype">
                     Web<span class="logospan-footer">Studio</span>
                 </a>
                 <p class="paragraph-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-            </div>
         </div>
     </footer>
     </div>
